--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+
+
 body {
-    background-color: aqua;
+    background-color: white;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
